--- a/main.css
+++ b/main.css
@@ -24,3 +24,11 @@ button{
 .promotionButtons{
     padding: 0px;
 }
+
+.highlight-white {
+    box-shadow: inset 0 0 3px 3px red;
+}
+  
+.highlight-black {
+    box-shadow: inset 0 0 3px 3px blue;
+}
