--- a/main.css
+++ b/main.css
@@ -1,26 +1,3 @@
-* {
-margin: auto;
-}
-
-button{
-    padding: 20px;
-    margin: 5px;
-}
-
-#chessBoard{
-    margin: auto;
-    width: 400px;
-    padding: 10px;
-}
-
-.buttonDiv{
-    text-align: center;
-}
-
-#promotionDiv{
-    visibility: hidden;
-}
-
 .promotionButtons{
     padding: 0px;
 }
@@ -40,4 +17,13 @@ button{
 #exPos{
     overflow: hidden;
     padding-bottom: 50px;
+}
+
+.margin-x-auto{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#promotionDiv{
+    visibility: hidden;
 }
